add JAVA_OPTS for docker container.